adding modal, adding discard pile

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@material/dialog": "^3.0.0",
     "@material/drawer": "^3.0.0",
     "@material/menu": "^3.0.0",
     "@material/select": "^3.0.0",
