minor css modifications

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@material/layout-grid": "^3.0.0",
     "@material/menu": "^3.0.0",
     "@material/select": "^3.0.0",
-    "@material/top-app-bar": "^3.0.0"
+    "@material/top-app-bar": "^3.0.0",
+    "deck":"^0",
+    "character":"^0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
