--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@material/menu": "^3.0.0",
     "@material/select": "^3.0.0",
     "@material/top-app-bar": "^3.0.0",
-    "deck":"^0",
-    "character":"^0"
+    "animations.js": "^1.0.5",
+    "character": "^0",
+    "deck": "^0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
