--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@material/select": "^3.0.0",
     "@material/top-app-bar": "^3.0.0",
     "animations.js": "^1.0.5",
-    "character": "1.0.0",
-    "deck": "1.0.0",
+    "character": "file:local_modules/character",
+    "deck": "file:local_modules/deck",
     "mem": "^5.1.1"
   },
   "devDependencies": {
